--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@
 # is commented out by default.
 #.vscode/
 
+ios/build
+android/app/build
+
 # Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
