--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,7 @@
             "type": "dart",
             "flutterMode": "debug",
             "args": [
+                "--no-sound-null-safety",
                 "--dart-define=ENV=dev"
             ]
         },
@@ -19,6 +20,7 @@
             "type": "dart",
             "flutterMode": "release",
             "args": [
+                "--no-sound-null-safety",
                 ""
             ]
         }
