--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-
+  provider: ^6.0.1
+  flutter_slidable: ^1.0.0
+  modal_bottom_sheet: ^2.0.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
