--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   provider: ^6.0.1
   flutter_slidable: ^1.0.0
   modal_bottom_sheet: ^2.0.0
-  
+  shared_preferences: ^2.0.7
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
