--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_slidable: ^1.0.0
   modal_bottom_sheet: ^2.0.0
   shared_preferences: ^2.0.7
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
