--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   modal_bottom_sheet: ^2.0.0
   shared_preferences: ^2.0.7
   intl: ^0.17.0
+  flutter_ringtone_player: ^3.1.0
 
 dev_dependencies:
   flutter_test:
